# infragraph

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  version-check.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 942e2d319f32_initial_schema.py
backend/app/: config.py  main.py
backend/app/adapters/terraform/: models.py  plan_parser.py  reference_resolver.py  state_parser.py
backend/app/db/: models.py  session.py
backend/app/routes/: findings.py  graph.py  ingest.py  resources.py
backend/app/schemas/: findings.py  graph.py  ingest.py  relationships.py  resources.py
backend/app/services/: findings_service.py  graph_service.py  ingest_service.py
backend/tests/: conftest.py  test_findings.py  test_graph.py  test_health.py  test_ingest.py  test_plan_parser.py  test_resources.py  test_state_parser.py
cli/: pyproject.toml
cli/infragraph_cli/: client.py  main.py  output.py
cli/infragraph_cli/commands/: findings.py  graph.py  ingest.py  resources.py
docs/: architecture.md  deployment.md
examples/: terraform-plan-findings.json  terraform-plan.json  terraform-state.json
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: api.ts  constants.ts  types.ts
infra/docker/: api.Dockerfile
infra/scripts/: bump-version.sh  dev_up.sh  seed.sh
(+16 files in other folders)
