[project]
name = "infragraph-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["typer>=0.12", "httpx>=0.27", "rich>=13"]

[project.scripts]
infragraph = "infragraph_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["infragraph_cli"]
